--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "baseUrl": ".",
+    "paths": {
+      "@pwsetup/*": ["playwright/.setup/*"],
+      "@pageobjects/*": ["page-objects/*"]
+    },
   },
   "include": ["./src"]
 }
